adiciona main e seu conteúdo ao index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>DCC 202 - Atividade 9: Lara da Silva Dias</title>
 </head>
 <body>
-    
+    <main>
+        <h1>DCC 202 - Atividade 9: Lara da Silva Dias</h1>
+        <p> Esta é a página principal e tem código JavaScript nela. Você só verá o resultado no console e durante a depuração.</p>
+    </main>
 </body>
 </html>
