--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DCC 202 - Atividade 9: Lara da Silva Dias</title>
+    <title>DCC202 - Atividade 9: Lara da Silva Dias</title>
 </head>
 <body>
     <main>
-        <h1>DCC 202 - Atividade 9: Lara da Silva Dias</h1>
-        <p> Esta é a página principal e tem código JavaScript nela. Você só verá o resultado no console e durante a depuração.</p>
+        <h1>DCC202 - Atividade 9: Lara da Silva Dias</h1>
+        <p>Esta é a página principal tem código JavaScript nela. Você só verá o resultado no console e durante a depuração.</p>
     </main>
     <script>
         let maria = 1;
@@ -16,12 +16,12 @@
         deJoaoParaMaria();
         deMariaParaJoao();
 
-        function deJoaoParaMaria {
+        function deJoaoParaMaria () {
             maria = maria + joao;
             joao = 0;
         }
 
-        function deMariaParaJoao{
+        function deMariaParaJoao () {
             joao = joao + maria;
             maria = 0;
         }
